--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "browser-sync": "^2.18.8",
     "gulp": "git://github.com/gulpjs/gulp.git#4.0",
     "gulp-cli": "^1.2.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-pug": "^3.2.0",
     "gulp-sass": "^3.1.0",
-    "gulp-util": "^3.0.8"
+    "gulp-util": "^3.0.8",
+    "pug": "^2.0.0-beta11"
+  },
+  "dependencies": {
+    "grunt": "^1.0.1"
   }
 }
